refacao lambda e front para ambientes dev e prod

--- a/serverless-lambda/package.json
+++ b/serverless-lambda/package.json
@@ -8,6 +8,7 @@
     "@aws-sdk/client-s3": "^3.295.0",
     "@aws-sdk/credential-providers": "^3.312.0",
     "@aws-sdk/s3-request-presigner": "^3.312.0",
+    "amqplib": "^0.10.3",
     "fast-csv": "^4.3.6"
   }
 }
