--- a/serverless-lambda/package.json
+++ b/serverless-lambda/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "start": "nodemon --exec serverless offline"
+  },
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "serverless-disable-functions": "^1.0.0",
     "serverless-offline": "^12.0.4",
     "serverless-s3-local": "^0.7.1"
